
* Fail gracefully on bad searches (#164).

UserTag
-------

* Added scratch option to [get-url] for saving binary content into a scratch
  variable instead of returning it.

* Fixed invalid JavaScript generated by the button tag (#135).

Payment
-------

* Removed inoperative WellsFargo payment module.

* Added Sage payment gateway. http://www.sagepayments.com/

Jobs
----

* Force email notification of errors, can be prevented with ignore_errors
  setting.

* Inclusion of global jobs can be forced with "Jobs UseGlobal 1"

Standard demo
-------------

* Fixed a security bug where an attacker could craft a URI that tricks
  Interchange into executing arbitrary Perl code.  The Perl code would be 
  subject to the Safe constraints of course, but could still be devastating 
  to the security of the target website.

* Display modified date on Saved Carts / Recurring Order page in a human
  readable format (#37).

UI
--

* Function UI::Primitive::list_images(), used by imagehelper, now works
  correctly with directory paths whose last component is a directory symlink
  (such as "path/to/symlink/*.jpg")

* It is now possible to have multiple imagehelper widgets that use different
  suffix filter on the same page. (such as 'images/*.jpg' and 'images/*.gif')

* Matrix options editor can now display more than 50 variants via the use of a
  more-list.

* Fix sort order of generated variant codes so that they match the code that is
  ordered from the flypage.

* You can now mark individual options to be treated as "simple options" even
  though the product is set to Matrix options.  This is useful if you have one
  or more options that you don't wish to track for inventory purposes or if you
  want to use a text or textarea widget (which is not possible with matrix
  options).  Requires the addition of an o_simple column to the options table
  for existing catalogs.

* New [widget-info] UI tag.

* Option editor will now correctly generate variants for options that use