@@ -128,6 +128,8 @@ Payment
 
 * Added Sage payment gateway. http://www.sagepayments.com/
 
+* Added Getitcard payment module.
+
 Jobs
 ----
 
